Added a way to send emails for demo and updated the code and swagger page.
